--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Tue Jul 15 17:32:41 CST 2014
+#Fri Jul 18 00:16:08 CST 2014
 app.grails.version=2.2.4
-app.name=RaceTrack
+app.name=
 app.version=0.1
+plugins.searchable=0.6.8
